--- a/package.json
+++ b/package.json
@@ -1,21 +1,45 @@
 {
   "name": "ridefusion",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/cookies": "^5.0.1",
+    "@react-native-cookies/cookies": "^6.2.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@toolz/use-synchronous-state": "^1.0.6",
+    "axios": "^1.7.2",
+    "babel-plugin-dotenv": "^0.1.1",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.14",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
+    "node-uber": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-autocomplete-input": "^5.4.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-virtualized-view": "^1.0.0",
+    "react-native-webview": "^13.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-mock-render": "^0.1.9"
   },
   "private": true
 }
