--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "ridefusion",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start --tunnel",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
-  "dependencies": {
-    "@react-native-community/cookies": "^5.0.1",
-    "@react-native-cookies/cookies": "^6.2.1",
+  "dependencies": { 
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -35,7 +33,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-virtualized-view": "^1.0.0",
-    "react-native-webview": "^13.10.4"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
