--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
-  "dependencies": { 
+  "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@toolz/use-synchronous-state": "^1.0.6",
     "axios": "^1.7.2",
     "babel-plugin-dotenv": "^0.1.1",
+    "cheerio": "^1.0.0-rc.12",
+    "css-select": "^5.1.0",
+    "domhandler": "^5.0.3",
     "dotenv": "^16.4.5",
     "expo": "~51.0.14",
     "expo-auth-session": "~5.5.2",
@@ -22,14 +27,18 @@
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
-    "node-uber": "^2.0.0",
+    "firebase": "^10.12.3",
+    "htmlparser2": "^9.1.0",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-autocomplete-input": "^5.4.0",
+    "react-native-cheerio": "^1.0.0-rc.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-html-parser": "^0.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-screens": "^3.32.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-virtualized-view": "^1.0.0",
