--- a/eas.json
+++ b/eas.json
@@ -1,26 +1,26 @@
 {
-    "build": {
-      "preview": {
-        "android": {
-          "buildType": "apk",
-          "image": "latest"
-        },
-        "env": {
-            "GOOGLE_API_KEY":"AIzaSyDoY8kaH8X6P2dhE0-FadrN5VOwfkt4Dwk"
-          }
+  "build": {
+    "preview": {
+      "android": {
+        "buildType": "apk",
+        "image": "latest"
       },
-      "preview2": {
-        "android": {
-          "gradleCommand": ":app:assembleRelease"
-        }
-      },
-      "preview3": {
-        "developmentClient": true
-      },
-      "preview4": {
-        "distribution": "internal"
-      },
-      "production": {}
-    }
+      "env": {
+        "GOOGLE_API_KEY": "AIzaSyDoY8kaH8X6P2dhE0-FadrN5VOwfkt4Dwk",
+        "PORT": "https://b7c6-49-43-242-175.ngrok-free.app"
+      }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
+    },
+    "preview4": {
+      "distribution": "internal"
+    },
+    "production": {}
   }
-  
+}
