--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
@@ -38,11 +37,13 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-html-parser": "^0.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-virtualized-view": "^1.0.0",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
